# game-opengl

./: CMakeLists.txt  README.md
include/engine/: element.h  parallax.h  render.h  shader.h  sprite.h  texture.h
include/glad/: glad.h
src/: main.cpp
src/engine/: element.cpp  parallax.cpp  render.cpp  shader.cpp  sprite.cpp  texture.cpp
src/glad/: glad.c
src/shaders/: default-frag.glsl  default-vert.glsl
